<resources>
    <string name="app_name">dimonvideo.ru.client</string>
    <string name="nav_header_title">Login or register</string>
    <string name="nav_header_subtitle">dimonvideo.ru</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Uploader</string>
    <string name="Comments">Comments:</string>
    <string name="no_more">No more item</string>
    <string name="menu_news">News</string>
    <string name="content_header">Content</string>
    <string name="signature_title">Your signature</string>
    <string name="pm_title">Private messages</string>
    <string name="password_title">Password</string>
    <string name="uploader">Uploader</string>
    <string name="refresh">Refresh</string>
    <string name="action_others">Others apps</string>
    <string name="action_feedback">Send feedback</string>
    <string name="app_mail">admin@dimonvideo.ru</string>
    <string name="category_title">Categories</string>
    <string name="vuploader">Vuploader</string>
    <string name="muzon">Music</string>
    <string name="books">Books</string>
    <string name="by"> by: </string>
    <string name="articles">Articles</string>
    <string name="menu_share_title">Share</string>
    <string name="action_open">Open page</string>
    <string name="view_header">View</string>
    <string name="theme_black">Dark theme</string>
    <string name="no_records">No Records</string>
    <string name="action_screen">View screen</string>
    <string name="close">No</string>
    <string name="download">Download</string>
    <string name="download_mod">Download MOD</string>
    <string name="search">Search</string>
    <string name="new_files">New files</string>
    <string name="download_mp4">View video</string>
    <string name="menu_forum">Forum</string>
    <string name="tab_topics">Topics</string>
    <string name="tab_forums">Forums</string>
    <string name="no_more_forums">No more Forums</string>
    <string name="tab_topics_no_posts">Topics no posts</string>
    <string name="like">Like</string>
    <string name="unlike">UnLike</string>
    <string name="favorites_btn">Added to favorites</string>
    <string name="unfavorites_btn">Removed from favorites</string>
    <string name="error_network_timeout">Error timeout, try again later</string>
    <string name="error_server">Server error, try again later!</string>
    <string name="error_network">Network error, try again later!</string>
    <string name="tab_last">Main</string>
    <string name="tab_details">Detailed view</string>
    <string name="tab_categories">Categories</string>
    <string name="tab_favorites">Favorites</string>
    <string name="cats_text">Items:</string>
    <string name="menu_android">Android</string>
    <string name="uploader_pref_tab">Uploader settings</string>
    <string name="android_pref_tab">Android settings</string>
    <string name="muzon_pref_tab">Muzon settings</string>
    <string name="vuploader_pref_tab">Vuploader settings</string>
    <string name="books_pref_tab">Books settings</string>
    <string name="news_pref_tab">News settings</string>
    <string name="articles_pref_tab">Articles settings</string>
    <string name="gallery_pref_tab">Gallery settings</string>
    <string name="vuploader_play_behavior">Play video on screen tap</string>
    <string name="vuploader_video_behavior">Change Aspect Ratio</string>
    <string name="action_like">Like</string>
    <string name="password_invalid">Password is invalid</string>
    <string name="select_razdel">Select razdel for Main</string>
    <string name="success_auth">Auth success</string>
    <string name="unsuccess_auth">Auth failed</string>
    <string name="login_invalid">Login invalid</string>
    <string name="sign_as">"Sign as: "</string>
    <string name="clear_login">Clear login detail</string>
    <string name="clear_alert_title">Really exit?</string>
    <string name="clear_alert_message">Logout from site</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="register">Registration</string>
    <string name="login">Login</string>
    <string name="login_btn">SignUp</string>
    <string name="control">2+6=</string>
    <string name="tab_inbox">Inbox</string>
    <string name="tab_pm">Messages</string>
    <string name="tab_trash">Trash</string>
    <string name="tab_arhiv">Arhiv</string>
    <string name="tab_outbox">Outbox</string>
    <string name="tab_ish">Send</string>
    <string name="msg_removed">Message removed</string>
    <string name="pm_send">Send</string>
    <string name="pm_reply_action">Reply</string>
    <string name="pm_deletion_checking">Checking message deletion…</string>
    <string name="pm_deletion_check_failed">Could not check the saved deletion. Retry the check or close this message.</string>
    <string name="pm_deletion_reopen">Refresh the message list and open this message again. Your draft is saved.</string>
    <string name="msg_restored">Restored</string>
    <string name="menu_fav">Favorites</string>
    <string name="tab_restore">Back</string>
    <string name="success_send_pm">Message sent</string>
    <string name="disable_pm_notify">Disable PM notify</string>
    <string name="dialog_no_result">No items found</string>
    <string name="pm_delete">Delete</string>
    <string name="no_data_available">No data available</string>
    <string name="is_more">Show More tab</string>
    <string name="tab_inline">Inline tabs headers</string>
    <string name="download_started">Download started</string>
    <string name="added_by">"Added by: "</string>
    <string name="disable_open_links">Open links in browser</string>
    <string name="action_donate">Donate</string>
    <string name="action_vote">Votes</string>
    <string name="action_page">Visit site</string>
    <string name="user_rang">"User status: "</string>
    <string name="user_last">"Last visit: "</string>
    <string name="user_rep">"Reputation: "</string>
    <string name="user_reg">"Registration: "</string>
    <string name="user_rat">"Rating: "</string>
    <string name="user_posts">"Posts: "</string>
    <string name="btn_profile">Open profile</string>
    <string name="scale_title">Font size</string>
    <string name="please_reload">Please restart the app!</string>
    <string name="success">Success!</string>
    <string name="copy_listtext">Copy description</string>
    <string name="listen_online">Listen online</string>
    <string name="muzon_play_behavior">Play audio on screen tap</string>
    <string name="whats_new_title">Whats new</string>
    <string name="whats_new_text">bug fix</string>
    <string name="export">Export settings to a file</string>
    <string name="export_success">Export to SD success</string>
    <string name="import_success">Import success, restart the app.</string>
    <string name="import_settings">Import from SD</string>
    <string name="restart_app">Please restart app!</string>
    <string name="dvget">DVGet / ADM integration</string>
    <string name="dvget_not_found">DVGet / ADM not installed!</string>
    <string name="thanks">Thank you for donate!</string>
    <string name="thanks_more">You donate is successful!</string>
    <string name="tracker">Tracker</string>
    <string name="open_video">Open video</string>
    <string name="vuploader_external_video">Open video in external player</string>
    <string name="blog">Blogs</string>
    <string name="tab_friends">Список друзей</string>
    <string name="btn_share_switch">Disable Share button</string>
    <string name="tab_inline_more">Align top tabs in center</string>
    <string name="btn_share_switch_more">Switch off big Share button</string>
    <string name="pm_read">Mark read</string>
    <string name="is_favor">Disable Favorites tab</string>
    <string name="is_comment">Disable Comments tab</string>
    <string name="perm_invalid">Permission not given</string>
    <string name="vuploader_play_listtext">Play video in description</string>
    <string name="idm">IDM / IDM+ integration.</string>
    <string name="idm_not_found">IDM / IDM+ not installed!</string>
    <string name="exit_toast">Press Back to exit</string>
    <string name="exit_menu">Exit app</string>
    <string name="action_abuse">Abuse to moderator</string>
    <string name="share_no_email_handler_found">No Email App found!</string>
    <string name="rules">Accept our <a href="https://dimonvideo.ru/apps/dvclient_privacy_policy.htm">app’s terms of user/user policy</a> and <a href="https://dimonvideo.ru/forum/topic_2397">site rules</a> before sign up.</string>
    <string name="btn_sett">Site settings</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_cache_success">Cache cleared!</string>
    <string name="action_rate">Rate app</string>
    <string name="no_bp">Billing not available</string>
    <string name="purchase_cancelled">Purchase was cancelled</string>
    <string name="mark">Mark all read</string>
    <string name="action_opds">OPDS</string>
    <string name="suploader">sUploader</string>
    <string name="tab_members">Members</string>
    <string name="tab_ignore">Ignor</string>
    <string name="copy_name">Copy name</string>
    <string name="action_like_member">Like</string>
    <string name="disable_pm_outbox">Hide outbox folder</string>
    <string name="disable_pm_arc">Hide Arhive folder</string>
    <string name="web">Site</string>
    <string name="app_functions">App functions</string>
    <string name="msg_archived">Archivied</string>
    <string name="add_friend">Add to friends</string>
    <string name="add_ignor">Add to ignor</string>
    <string name="remove_all">Remove from all lists</string>
    <string name="tab_icons">Show tabs icons</string>
    <string name="tab_icons_more">will show tabs icons only</string>
    <string name="success_image">Image uploaded!</string>
    <string name="press_twice">Press twice to exit</string>
    <string name="menu_add_file">Add file</string>
    <string name="file_name">File name</string>
    <string name="select_razdel_add">Select razdel…</string>
    <string name="file_description">description…</string>
    <string name="note">Please read our <a href="https://dimonvideo.ru/forum/topic_1728123534">FAQ</a> first</string>
    <string name="please_wait">Please wait</string>
    <string name="choose_category">choose category…</string>
    <string name="select_screen">select screenshot</string>
    <string name="save_file">Send to site</string>
    <string name="warning">Warning</string>
    <string name="warning_message">Do you want to leave this page?</string>
    <string name="check_message">Are you sure?</string>
    <string name="lid">id</string>
    <string name="success_send_file">File send succsefully!</string>
    <string name="news_ist">News source</string>
    <string name="post_description">post here</string>
    <string name="vote">Vote</string>
    <string name="vote_sum">will shown our vote</string>
    <string name="is_info_feedback">======</string>
    <string name="is_more_odob">Replace More by Waiting</string>
    <string name="is_more_odob_sum">replace more tab with waiting tab</string>
    <string name="download_complete">Download complete</string>
    <string name="device">Devices catalog</string>
    <string name="tab_waiting">Waiting</string>
    <string name="odob">Approve</string>
    <string name="main">Main</string>
    <string name="votes">Votes</string>
    <string name="predlog_vote">New vote</string>
    <string name="results_vote">Votes results</string>
    <string name="put_to_news">Put to news</string>
    <string name="ontop">Scroll to top button</string>
    <string name="pm_attach_image">Attach image</string>
    <string name="pm_send_and_delete">Send and delete</string>
    <string name="pm_close">Close</string>
    <string name="pm_retry">Retry</string>
</resources>