<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:checkable="true"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
    </group>
    <group
        android:id="@+id/menu_forum"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_forum"
            android:checkable="true"
            android:icon="@drawable/baseline_forum_24"
            android:title="@string/menu_forum" />
    </group>
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:checkable="true"
            android:icon="@drawable/baseline_newspaper_24"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_uploader"
            android:checkable="true"
            android:icon="@drawable/baseline_save_alt_24"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_android"
            android:checkable="true"
            android:icon="@drawable/baseline_android_24"
            android:title="@string/menu_android" />
        <item
            android:id="@+id/nav_tracker"
            android:checkable="true"
            android:icon="@drawable/baseline_cloud_download_24"
            android:title="@string/tracker" />
        <item
            android:id="@+id/nav_vuploader"
            android:checkable="true"
            android:icon="@drawable/baseline_movie_24"
            android:title="@string/vuploader" />
        <item
            android:id="@+id/nav_books"
            android:checkable="true"
            android:icon="@drawable/baseline_menu_book_24"
            android:title="@string/books" />
        <item
            android:id="@+id/nav_muzon"
            android:checkable="true"
            android:icon="@drawable/baseline_music_note_24"
            android:title="@string/muzon" />
        <item
            android:id="@+id/nav_articles"
            android:checkable="true"
            android:icon="@drawable/baseline_article_24"
            android:title="@string/articles" />
        <item
            android:id="@+id/nav_gallery"
            android:checkable="true"
            android:icon="@drawable/baseline_image_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_blog"
            android:checkable="true"
            android:icon="@drawable/baseline_rss_feed_24"
            android:title="@string/blog" />
        <item
            android:id="@+id/nav_suploader"
            android:checkable="true"
            android:icon="@drawable/baseline_download_for_offline_24"
            android:title="@string/suploader" />
    </group>
</menu>