<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="0"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="1"
        android:title="@string/refresh"
        android:icon="@android:drawable/ic_popup_sync"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="9"
        android:title="@string/menu_share_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_open"
        android:orderInCategory="9"
        android:title="@string/action_open"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="9"
        android:title="@string/action_feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_donate"
        android:orderInCategory="10"
        android:title="@string/action_donate"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_vote"
        android:orderInCategory="11"
        android:title="@string/action_vote"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_abuse"
        android:orderInCategory="12"
        android:title="@string/action_abuse"
        app:showAsAction="never" />
</menu>