<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2025. Разработчик: Дмитрий Вороной.
  ~ Разработано для сайта dimonvideo.ru
  ~ При использовании кода ссылка на проект обязательна.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="1"
        android:title="@string/refresh"
        android:icon="@android:drawable/ic_popup_sync"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_open"
        android:orderInCategory="9"
        android:title="@string/action_open"
        app:showAsAction="never" />
</menu>